# mlaps

./: .gitignore  README.md  client_install.sh  dev_enroll.sh  docker-compose.base.yml  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.testing.yml  findAndReplaceMe  install-requirements.sh  linux_test.sh  mlaps_client.sh  requirements.txt  sample-gitlab-ci.yml
.github/workflows/: container-image.yaml
app/: Controller.py  Makefile  config-dev.ini  config-sample.ini  config.ini  customSessionInterface.py  dbClient.py  demo-admin.html  hsmclient.py  logger.py  pyproject.toml  secrets-dev.ini  secrets-dev.json  starter.py  tableBuilder.py
app/static/: default.js  style.css  tablelogic.js  tablestyle.css
app/templates/: accesslog.html  admin.html  admin_sharelink_modal.html  bad_request.html  base.html  index.html  legal-notice.html  machine.html  modal.html  public.html  share_password.html  toast.html
app/test/: test_db_init.py
app/test/fixtures/: db.py
docker/keycloak/: demo.json  dev.json
docker/keycloak-data/kernel/: process-uuid
docker/mlaps/: mlaps-prod.Dockerfile  mlaps.Dockerfile  wait-for-mysql.sh
docker/nginx/: htaccess.htpasswd  mlaps-demo.conf  mlaps.conf  nginx.Dockerfile
docker/vault/: policy.hcl  setup-demo.sh  setup.old.sh  setup.sh  vault.Dockerfile
docker/volumes/config/: vault.hcl
