[tool.poetry]
name = "mlaps"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
flask-oidc-ex = "^0.6.2"
hvac = "^0.11.2"
Flask-APScheduler = "^1.12.4"
pyOpenSSL = "^22.0.0"
pony = "^0.7.16"
PyMySQL = "^1.0.2"
Flask-Table = "^0.5.0"
Flask-WTF = "^1.0.1"

[tool.poetry.dev-dependencies]
Werkzeug = "2.2.2"
pytest = "^7.1.2"
freezegun = "^1.2.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
